--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,11 @@
 /.idea/
 docker-ssh.sh
 /.scannerwork/
+###> symfony/phpunit-bridge ###
+.phpunit
+/phpunit.xml
+###< symfony/phpunit-bridge ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+###< phpunit/phpunit ###
